# bug-rules-python-annotation-pyqt

./: BUILD.bazel  WORKSPACE  requirements.in  requirements_linux.txt
